--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.0",
+        "@types/pg": "^8.15.6",
         "drizzle-kit": "^0.20.6",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.3.2"
