security: Remove hardcoded credentials and protect seed phrases
- Remove bitcoin-node credentials from deployment plan
- Add settings/*.toml to .gitignore to protect seed phrases
- Create Testnet.toml.example template
- Remove Testnet.toml from git tracking

Fixes GitGuardian security alert #23208687

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,12 @@ next-env.d.ts
 # Backend
 backend/dist/
 
+# Clarinet settings (contains seed phrases and private keys)
+settings/Testnet.toml
+settings/Mainnet.toml
+settings/*.toml
+!settings/Devnet.toml
+
+# Clarinet cache
+.cache/
+
