feat: Upgrade Clarity contracts to v4, add liquidity locker, implement per-NFT URIs, and introduce Drizzle ORM with user management and chat services.

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,35 +9,40 @@ cache_dir = "./.cache"
 # contract_id = "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.sbtc-token"
 # Mainnet: SM3VDXK3WZZSA84XXFKAFAF15NNZX32CTSG82JFQ4.sbtc-token
 
-[contracts.launchpad]
+[contracts.launchpad-v4]
 path = "contracts/launchpad.clar"
-clarity_version = 2
-epoch = 2.5
+clarity_version = 4
+epoch = 'latest'
 
-[contracts.marketplace]
+[contracts.marketplace-v4]
 path = "contracts/marketplace.clar"
-clarity_version = 2
-epoch = 2.5
+clarity_version = 4
+epoch = 'latest'
 
-[contracts.reputation]
+[contracts.reputation-v4]
 path = "contracts/reputation.clar"
-clarity_version = 2
-epoch = 2.5
+clarity_version = 4
+epoch = 'latest'
 
-[contracts.stacks-hub-avatars]
+[contracts.liquidity-locker-v4]
+path = "contracts/liquidity-locker.clar"
+clarity_version = 4
+epoch = 'latest'
+
+[contracts.stacks-hub-avatars-v5]
 path = "contracts/stacks-hub-avatars.clar"
-clarity_version = 2
-epoch = 2.5
+clarity_version = 4
+epoch = 'latest'
 
-[contracts.sip009-nft-trait]
+[contracts.sip009-nft-trait-v4]
 path = "contracts/sip009-nft-trait.clar"
-clarity_version = 2
-epoch = 2.5
+clarity_version = 4
+epoch = 'latest'
 
-[contracts.sip010-ft-trait]
+[contracts.sip010-ft-trait-v4]
 path = "contracts/sip010-ft-trait.clar"
-clarity_version = 2
-epoch = 2.5
+clarity_version = 4
+epoch = 'latest'
 
 [repl.analysis]
 passes = ["check_checker"]
