--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@stacks/connect": "^8.2.3",
     "@stacks/encryption": "^7.3.0",
-    "@stacks/network": "^6.13.0",
+    "@stacks/network": "^7.2.0",
     "@stacks/storage": "^7.3.0",
     "@stacks/transactions": "^7.3.0",
+    "@stacks/wallet-sdk": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-fetch": "^4.1.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.556.0",
     "next": "^16.0.7",
