--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,14 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/server.js",
-        "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+        "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+        "migrate": "drizzle-kit push:pg"
     },
     "dependencies": {
         "@socket.io/redis-adapter": "^8.3.0",
         "@stacks/common": "^7.0.2",
         "@stacks/network": "^7.2.0",
-        "@stacks/transactions": "^6.17.0",
+        "@stacks/transactions": "^7.3.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "drizzle-orm": "^0.29.0",
