feat: Introduce chat functionality, implement launchpad features, and refactor reputation contract for authorized calls.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "description": "The Bitcoin Superapp on Stacks",
     "icons": [
         {
-            "src": "/logo.svg",
+            "src": "/orange_logo.svg",
             "sizes": "any",
             "type": "image/svg+xml"
         }
