chore: Update dependencies to latest versions and fix Stacks SDK compatibility
Security & Dependency Updates:
- Update Next.js: 16.0.7 → 16.0.8
- Update Stacks SDK packages to v7.x (Nakamoto compatible)
- Update backend dependencies (drizzle-kit, express, helmet, etc.)
- Fix Stacks SDK API breaking changes (StacksMainnet/Testnet → STACKS_MAINNET/TESTNET)
- Fix drizzle-kit v0.31.8 config (dialect, url instead of driver, connectionString)
- Fix @stacks/transactions API (callReadOnlyFunction → fetchCallReadOnlyFunction)

Build & Deployment:
- ✅ Production build passes successfully
- Add Vercel deployment configuration (vercel.json)
- Add .env.example template
- Update .gitignore to protect .env files

All changes tested and ready for Vercel deployment!

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ settings/*.toml
 # Clarinet cache
 .cache/
 
+# Environment files (but allow .env.example)
+.env
+.env.local
+.env.*.local
+!.env.example
+
