--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@reown/appkit": "^1.8.15",
+    "@reown/appkit-adapter-bitcoin": "^1.8.15",
     "@stacks/connect": "^8.2.3",
     "@stacks/encryption": "^7.3.0",
     "@stacks/network": "^7.2.0",
@@ -46,9 +48,15 @@
     "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "^16.0.8",
+    "ignore-loader": "^0.1.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "pino": "7.11.0",
+    "thread-stream": "0.15.2"
   }
 }
